--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -6,8 +6,8 @@
     %
     Context splitting, the channel management technique directly related to the
     way session type theories are usually written with pen and paper, is often
-    considered a hindrance and a notable source of complexity, to the point that
-    several alternative approaches have been recently proposed.
+    considered a hindrance and a notable source of complexity, to the point
+    where several alternative approaches have been recently proposed.
     %
     In this paper we describe the Agda formalisation of a process calculus based
     on classical linear logic that supports the modeling of binary sessions
