--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -8,13 +8,13 @@ modeled in \LCC using the continuation-passing encoding described by
 \citet[extended version]{Kobayashi02b} and \citet{DardhaGiachinoSangiorgi17}.
 
 The linear calculus of continuations and the calculus described in the linearity
-challenge~\cite{CarboneEtAl24} are incomparable in terms of expressiveness. The
-challenge only considers a minimal calculus of first-order, monomorphic sessions
-while \LCC supports linear, shared, higher-order, polymorphic channels. At the
-same time, the calculus of the challenge allows the modeling of sequential
-processes owning both endpoints of a session and in general of cyclic network
-topologies, none of which can be modeled in \LCC because of its tight
-correspondence with linear logic.
+challenge~\cite{CarboneEtAl24} are incomparable in terms of expressiveness. On
+the one hand, the challenge only considers a minimal calculus of first-order,
+monomorphic sessions while \LCC supports linear, shared, higher-order,
+polymorphic channels; on the other hand, the calculus of the challenge allows
+the modeling of sequential processes owning both endpoints of a session and in
+general of cyclic network topologies, none of which can be modeled in \LCC
+because of its tight correspondence with linear logic.
 %
 We think that \LCC deserves its own space in the context of the linearity
 challenge alongside with (but not in substitution of) more traditional session
