--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -67,10 +67,10 @@ The logical foundations of \LCC and the use of explicit continuations play an
 important role in taming the complexity of the formalisation.
 %
 Working with a calculus based on linear logic prevents \emph{by construction}
-the same (sequential) process to own both endpoints of a session. This situation
-is clearly undesirable since it does not correspond to a useful pattern of
-interaction (every meaningful session requires its endpoints to be used by
-parallel processes) and is a potential source of deadlocks.
+the same (sequential) process to own both endpoints of a session, which is
+undesirable since it does not correspond to a useful pattern of interaction
+(every meaningful session requires its endpoints to be used by parallel
+processes) and is a potential source of deadlocks.
 %
 From the standpoint of the formalisation, where the representation of channels
 is a primary design choice, it spares us the need to distinguish the two
