--- a/paper/cover-letter.tex
+++ b/paper/cover-letter.tex
@@ -21,10 +21,11 @@ session endpoints are linear resources that cannot be duplicated or discarded.
 The paper describes a particular solution of the linearity challenge in which we
 formalise a low level model of computation whose type system corresponds to the
 proof system of classical linear logic and into which sessions can be encoded
-instead of being featured natively. The paper includes a thorough comparison
-with related formalisations of linear/session calculi. Despite the low level of
-abstraction of the calculus and the full range of features supported by its type
-system, we show that the calculus allows for a remarkably simple formalisation.
+instead of being featured natively. Despite the low level of abstraction of the
+calculus and the full range of features supported by its type system, we show
+that the calculus allows for a remarkably simple formalisation. The paper
+includes a thorough comparison with related formalisations of linear/session
+calculi.
 
 The paper has not been published elsewhere. The formalisation started as a
 master thesis project of Claudia Raffaelli, a former student of mine and
