--- a/paper/Congruence.lagda.tex
+++ b/paper/Congruence.lagda.tex
@@ -69,9 +69,9 @@ The constructor \AgdaInductiveConstructor{s-wait} models the \SWait rule:
 \end{code}
 
 There are two non-trivial aspects worth commenting. The first one concerns the
-proof $\AgdaInductiveConstructor{>}~q$ used in the
-\AgdaInductiveConstructor{wait} process. To understand the meaning of this
-proof, we must recall three key elements:
+proof $\AgdaInductiveConstructor{>}~q$ used within
+\AgdaInductiveConstructor{wait}. To understand the meaning of this proof, we
+must recall three key elements:
 \begin{enumerate}
   \item
     $(\AgdaInductiveConstructor{wait}~(\AgdaInductiveConstructor{ch~⟨~>}~q~\AgdaInductiveConstructor{⟩}~P)$
