--- a/paper/Examples.tex
+++ b/paper/Examples.tex
@@ -187,7 +187,8 @@ typing context) and continues as either $P$ or $Q$ depending on whether it
 receives true or false. We use \AgdaFunction{curry∗} (defined in
 \Cref{sec:context-agda}) to curry the constructor
 \AgdaInductiveConstructor{case} so that we can supply its arguments one by one
-saving a few parentheses and reducing clutter.
+saving a few parentheses and reducing clutter (more on this in \Cref{rem:curry}
+at the end of this section).
 
 Next we define a process $\AgdaFunction{Drop}~P$ that consumes a boolean and
 continues as $P$ regardless of its value.
@@ -311,7 +312,7 @@ For the sake of illustration, we have chosen to define the disjunction
 \AgdaFunction{||} from the conjunction \AgdaFunction{\&\&} and negation
 \AgdaFunction{!!} using De Morgan's laws.
 
-To test our definitions we implement a simple evaluator using the deadlock
+To test our definitions, we implement a simple evaluator using the deadlock
 freedom property. We have not proved a termination result, but since linear
 logic enjoys cut elimination we can safely annotate the evaluator as
 terminating.
@@ -518,7 +519,7 @@ and the client that sends true to it
 \AgdaInductiveConstructor{ch}\<%
 \end{code}
 
-To test our definitions we compose client and server in parallel
+To test our definitions, we compose client and server in parallel
 \begin{code}%
 \>[0]\AgdaFunction{Main}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -540,6 +541,7 @@ and then ask Agda to normalize \AgdaFunction{Main}, which yields
 \AgdaFunction{True} as expected.
 
 \begin{remark}
+    \label{rem:curry}
     Writing processes in Agda would be more pleasant if the constructors of the
     data type \AgdaDatatype{Proc} were naturally curried, instead of currying
     them on demand with \AgdaFunction{curry∗} as we do here.
