--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -1,8 +1,8 @@
 \abstract{%
-    The formalisation of session calculi is considered challenging because of
-    the management of channels, which are linear resources that cannot be
-    discarded or duplicated and whose type changes over time, as input/output
-    operations are performed on them.
+    The formalisation of session calculi is made difficult by the management of
+    session channels, which are linear resources that cannot be discarded or
+    duplicated and whose type changes over time, as input/output operations are
+    performed on them.
     %
     Context splitting, the channel management technique directly related to the
     way session type theories are usually written with pen and paper, is often
