--- a/paper/calculus.tex
+++ b/paper/calculus.tex
@@ -326,11 +326,11 @@ Note also that there are two versions of \SForkL and \SForkR depending on which
 of the two continuations (either $P$ or $Q$) contains a free occurrence of the
 restricted channel $x$.
 
-There is no pre-congruence rule asserting that parallel composition is
-associative. While this is a sound property of parallel composition, it turns
-out to be unnecessary for proving the properties of \Calculus that we consider. We
-leave it out in light of the forthcoming formalisation of the calculus, in which
-every simplification is welcome.
+% There is no pre-congruence rule asserting that parallel composition is
+% associative. While this is a sound property of parallel composition, it turns
+% out to be unnecessary for proving the properties of \Calculus that we consider. We
+% leave it out in light of the forthcoming formalisation of the calculus, in which
+% every simplification is welcome.
 %
 Another rule that deserves attention is \SServer. In this case, a cut can be
 pushed underneath a server prefix $\Server\y\u$ only provided that the other
@@ -701,7 +701,7 @@ therefore can be generalised.
         \end{prooftree}
     \]
     %
-    where the side condition of the rule \ForallRule is trivially satifised
+    where the side condition of the rule \ForallRule is trivially satisfied
     since the typing context does not contain bindings other than the one for
     $y$.
     %
