--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -28,10 +28,7 @@ a literal sense.
 %
 In this respect, we find it intriguing that, among the alternative approaches
 that have been proposed to overcome the difficulties of context splitting, the
-one by \citet{SanoKavanaghPientka23} makes key use of explicit continuations and
-also that, in a different setting, the continuation-based encoding of binary
-sessions has greatly simplified the problem of session type
-reconstruction~\cite{Padovani17}.
+one by \citet{SanoKavanaghPientka23} makes key use of explicit continuations.
 
 The compact formalisation of \LCC is a good starting point for further
 developments. We have already extended \LCC with support for coinductive (\ie
