--- a/paper/Permutations.tex
+++ b/paper/Permutations.tex
@@ -46,14 +46,14 @@
 \subsection{Context Permutations}
 \label{sec:permutations-agda}
 
-According to our nameless representation of channels, it is the \emph{position}
-of a type in a typing context $\Context$ that determines the location of its
-binder in the structure of a process. When the binding structure of a process
-changes, \eg because a structural pre-congruence rule is applied, or when a
-channel substitution occurs, \cf the right-hand side of the \LinkRule reduction
-in \Cref{tab:semantics}, $\Context$ must be suitably rearranged to agree with
-the updated binding structure. Such rearrangement is in fact a
-\emph{permutation} of the elements of $\Context$.
+According to our nameless representation of channels, the \emph{position} of a
+type in a typing context $\Context$ determines the location of its binder in the
+structure of a process. When the binding structure of a process changes, \eg
+because a structural pre-congruence rule is applied, or when a channel
+substitution occurs, \cf the right-hand side of the \LinkRule reduction in
+\Cref{tab:semantics}, $\Context$ must be suitably rearranged to agree with the
+updated binding structure. Such rearrangement is in fact a \emph{permutation} of
+the elements of $\Context$.
 
 We define typing context permutations inductively, as a binary relation
 \AgdaDatatype{\_↭\_}:
@@ -280,8 +280,8 @@ these constructors in the rest of the code.
 \end{code}
 
 It is easy to see that \AgdaDatatype{\_↭\_} is an equivalence relation. In the
-following we also use another specific property of permutations related to
-context splitting and list concatenation \AgdaFunction{\_++\_}: if
+following we also use another property of permutations related to context
+splitting and list concatenation \AgdaFunction{\_++\_}: if
 $\Splitting\ContextC\ContextD\ContextE$, then $\ContextC$ is a permutation of
 the concatenation of $\ContextD$ and $\ContextE$.
 
