--- a/paper/cover-letter.tex
+++ b/paper/cover-letter.tex
@@ -23,9 +23,9 @@ formalise a low level model of computation whose type system corresponds to the
 proof system of classical linear logic and into which sessions can be encoded
 instead of being featured natively. Despite the low level of abstraction of the
 calculus and the full range of features supported by its type system, we show
-that the calculus allows for a remarkably simple formalisation. The paper
-includes a thorough comparison with related formalisations of linear/session
-calculi.
+that the calculus allows for a remarkably simple formalisation and may provide
+valuable guidance for future mechanisation efforts. The paper includes a
+thorough comparison with related formalisations of linear/session calculi.
 
 The paper has not been published elsewhere. The formalisation started as a
 master thesis project of Claudia Raffaelli, a former student of mine and
