--- a/paper/main.tex
+++ b/paper/main.tex
@@ -118,6 +118,18 @@
 \input{related}
 \input{conclusion}
 
+\backmatter
+
+\section*{Declarations}
+
+\subsection*{Funding}
+
+No funding was received for conducting this study.
+
+\subsection*{Author Contributions}
+
+C.R. developed the initial Agda formalisation and reviewed the existing related work. L.P. refined and extended the formalisation and wrote the main manuscript text. All authors reviewed the manuscript.
+
 \bibliography{main}
 
 \end{document}
